syntax = "proto3";

package codehorse.mpaas.pod;

option go_package = "github.com/solodba/devcloud/tree/main/mpaas/apps/pod";

// 导入外部包
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// 创建Pod请求
message CreatePodRequest {
    // @gotags: bson:",inline" json:"pod"
    Pod pod = 1;
}

// Pod结构体
message Pod {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"base"
    Base Base = 2;
    // @gotags: bson:"volumes" json:"volumes"
    repeated Volume Volumes = 3;
    // @gotags: bson:",inline" json:"netWorking"
    NetWorking NetWorking = 4;
    // @gotags: bson:"initContainers" json:"initContainers"
    repeated Container InitContainers = 5;
    // @gotags: bson:"containers" json:"containers"
    repeated Container Containers = 6;
    // @gotags: bson:"tolerations" json:"tolerations"
    repeated Tolerations Tolerations = 7;
    // @gotags: bson:",inline" json:"nodeScheduling"
    NodeScheduling NodeScheduling = 8;
}

// Tolerations结构体
message Tolerations {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
    // @gotags: bson:"operator" json:"operator"
    string Operator = 3;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// Base结构体
message Base {
    // @gotags: bson:"name" json:"name" validate:"required"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels" 
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"restartPolicy" json:"restartPolicy" 
    string RestartPolicy = 4;
}

// Volume结构体
message Volume {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"type" json:"type" 
    string Type = 2;
    // @gotags: bson:"configMapRefVolume" json:"configMapRefVolume"
    ConfigMapRefVolume ConfigMapRefVolume = 3;
    // @gotags: bson:"secretRefVolume" json:"secretRefVolume"
    SecretRefVolume SecretRefVolume = 4;
    // @gotags: bson:"hostPathVolume" json:"hostPathVolume"
    HostPathVolume HostPathVolume = 5;
    // @gotags: bson:"downwardAPIVolume" json:"downwardAPIVolume"
    DownwardAPIVolume DownwardAPIVolume = 6;
    // @gotags: bson:"PVCVolume" json:"PVCVolume"
    PVCVolume PVCVolume = 7;
}

// ConfigMapRefVolume结构体
message ConfigMapRefVolume {
    // @gotags: bson:"name" json:"name" 
    string Name = 1;
    // @gotags: bson:"optional" json:"optional" 
    bool Optional = 2;
}

// SecretRefVolume结构体
message SecretRefVolume {
    // @gotags: bson:"name" json:"name" 
    string Name = 1;
    // @gotags: bson:"optional" json:"optional" 
    bool Optional = 2;
}

// HostPathVolume结构体
message HostPathVolume {
    // @gotags: bson:"type" json:"type"
    string Type = 1;
    // @gotags: bson:"path" json:"path"
    string Path = 2;
}

// DownwardAPIVolumeItem结构体
message DownwardAPIVolumeItem {
    // @gotags: bson:"path" json:"path"
    string Path = 1;
    // @gotags: bson:"fieldRefPath" json:"fieldRefPath"
    string FieldRefPath = 2;
}

// DownwardAPIVolume结构体
message DownwardAPIVolume {
    // @gotags: bson:"items" json:"items"
    repeated DownwardAPIVolumeItem Items = 1;
}

// PVCVolume结构体
message PVCVolume {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
}

// NetWorking结构体
message NetWorking {
    // @gotags: bson:"hostNetwork" json:"hostNetwork"
    bool HostNetwork = 1;
    // @gotags: bson:"hostName" json:"hostName"
    string HostName = 2;
    // @gotags: bson:"dnsPolicy" json:"dnsPolicy"
    string DnsPolicy = 3;
    // @gotags: bson:",inline" json:"dnsConfig"
    DnsConfig DnsConfig = 4;
    // @gotags: bson:"hostAliases" json:"hostAliases"
    repeated ListMapItem HostAliases = 5;
}

// DnsConfig结构体
message DnsConfig {
    // @gotags: bson:"nameservers" json:"nameservers"
    repeated string Nameservers = 1;
}

// Container结构体
message Container {
    // @gotags: bson:"name" json:"name" validate:"required"
    string Name = 1;
    // @gotags: bson:"image" json:"image" validate:"required"
    string Image = 2;
    // @gotags: bson:"imagePullPolicy" json:"imagePullPolicy"
    string ImagePullPolicy = 3;
    // @gotags: bson:"tty" json:"tty"
    bool Tty = 4;
    // @gotags: bson:"ports" json:"ports"
    repeated ContainerPort Ports = 5;
    // @gotags: bson:"workingDir" json:"workingDir"
    string WorkingDir = 6;
    // @gotags: bson:"command" json:"command"
    repeated string Command = 7;
    // @gotags: bson:"args" json:"args"
    repeated string Args = 8;
    // @gotags: bson:"envs" json:"envs"
    repeated EnvVar Envs = 9;
    // @gotags: bson:"envsFrom" json:"envsFrom"
    repeated EnvVarFromResource EnvsFrom = 10;
    // @gotags: bson:"privileged" json:"privileged"
    bool Privileged = 11;
    // @gotags: bson:",inline" json:"resources"
    Resources Resources = 12;
    // @gotags: bson:"volumeMounts" json:"volumeMounts"
    repeated VolumeMounts VolumeMounts = 13;
    // @gotags: bson:"startupProbe" json:"startupProbe"
    ContainerProbe StartupProbe = 14;
    // @gotags: bson:"livenessProbe" json:"livenessProbe"
    ContainerProbe LivenessProbe  = 15;
    // @gotags: bson:"readinessProbe" json:"readinessProbe"
    ContainerProbe ReadinessProbe = 16;
}

// EnvVar结构体
message EnvVar {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"refName" json:"refName"
    string RefName = 2;
    // @gotags: bson:"value" json:"value"
    string Value = 3;
    // @gotags: bson:"type" json:"type"
    string Type = 4;
}

// EnvVarFromResource结构体
message EnvVarFromResource {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"refType" json:"refType"
    string RefType = 2;
    // @gotags: bson:"prefix" json:"prefix"
    string Prefix = 3;
}

// ContainerPort结构体
message ContainerPort {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"containerPort" json:"containerPort"
    int32 ContainerPort = 2;
    // @gotags: bson:"hostPort" json:"hostPort"
    int32 HostPort  = 3;
}

// Resources结构体
message Resources {
    // @gotags: bson:"enable" json:"enable"
    bool Enable = 1;
    // @gotags: bson:"memRequest" json:"memRequest"
    int32 MemRequest = 2;
    // @gotags: bson:"memLimit" json:"memLimit"
    int32 MemLimit = 3;
    // @gotags: bson:"cpuRequest" json:"cpuRequest"
    int32 CpuRequest = 4;
    // @gotags: bson:"cpuLimit" json:"cpuLimit"
    int32 CpuLimit = 5;
}

// VolumeMounts结构体
message VolumeMounts { 
    // @gotags: bson:"mountName" json:"mountName"
    string MountName = 1;
    // @gotags: bson:"mountPath" json:"mountPath"
    string MountPath = 2;
    // @gotags: bson:"readOnly" json:"readOnly"
    bool ReadOnly = 3;
}

// ContainerProbe结构体
message ContainerProbe {
    // @gotags: bson:"enable" json:"enable"
    bool Enable = 1;
    // @gotags: bson:"type" json:"type"
    string Type = 2;
    // @gotags: bson:"httpGet" json:"httpGet" 
    ProbeHttpGet HttpGet = 3;
    // @gotags: bson:"exec" json:"exec"
    ProbeCommand Exec = 4;
    // @gotags: bson:"tcpSocket" json:"tcpSocket"
    ProbeTcpSocket TcpSocket = 5;
    // @gotags: bson:"probeTime" json:"probeTime"
    ProbeTime ProbeTime = 6;
}

// ProbeHttpGet结构体
message ProbeHttpGet {
    // @gotags: bson:"scheme" json:"scheme"
    string Scheme = 1;
    // @gotags: bson:"host" json:"host"
    string Host = 2;
    // @gotags: bson:"path" json:"path"
    string Path = 3;
    // @gotags: bson:"port" json:"port"
    int32 Port = 4;
    // @gotags: bson:"httpHeaders" json:"httpHeaders"
    repeated ListMapItem HttpHeaders = 5;
}

// ProbeCommand结构体
message ProbeCommand {
    // @gotags: bson:"command" json:"command"
    repeated string Command = 1;
}

// ProbeTcpSocket结构体
message ProbeTcpSocket {
    // @gotags: bson:"host" json:"host"
    string Host = 1;
    // @gotags: bson:"port" json:"port"
    int32 Port = 2;
}

// ProbeTime结构体
message ProbeTime {
    // @gotags: bson:"initialDelaySeconds" json:"initialDelaySeconds"
    int32 InitialDelaySeconds = 1;
    // @gotags: bson:"periodSeconds" json:"periodSeconds"
    int32 PeriodSeconds = 2;
    // @gotags: bson:"timeoutSeconds" json:"timeoutSeconds"
    int32 TimeoutSeconds = 3;
    // @gotags: bson:"successThreshold" json:"successThreshold"
    int32 SuccessThreshold  = 4;
    // @gotags: bson:"failureThreshold" json:"failureThreshold"
    int32 FailureThreshold = 5;
}

// NodeScheduling结构体
message NodeScheduling {
    // @gotags: bson:"type" json:"type"
    string Type = 1;
    // @gotags: bson:"nodeName" json:"nodeName"
    string NodeName = 2;
    // @gotags: bson:"nodeSelector" json:"nodeSelector"
    repeated ListMapItem NodeSelector = 3;
    // @gotags: bson:"nodeAffinity" json:"nodeAffinity"
    repeated NodeSelectorTermExpressions NodeAffinity = 4;
}

// NodeSelectorTermExpressions结构体
message NodeSelectorTermExpressions {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"values" json:"values"
    string Value = 2;
    // @gotags: bson:"operator" json:"operator"
    string Operator = 3;
}

// PodListItem结构体
message PodListItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"Ready" json:"Ready"
    string Ready = 2;
    // @gotags: bson:"status" json:"status"
    string Status = 3;
    // @gotags: bson:"restarts" json:"restarts"
    int32 Restarts = 4;
    // @gotags: bson:"age" json:"age"
    int64 Age = 5;
    // @gotags: bson:"IP" json:"IP"
    string IP = 6;
    // @gotags: bson:"node" json:"node"
    string Node = 7;
}

// PodSet结构体
message PodSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated PodListItem PodListItem = 2;
}